--- a/romance/Info.plist
+++ b/romance/Info.plist
@@ -21,6 +21,10 @@
 		<string>SF-Pro-Display-ThinItalic.otf</string>
 		<string>SF-Pro-Display-Ultralight.otf</string>
 		<string>SF-Pro-Display-UltralightItalic.otf</string>
+		<string>coolvetica rg.ttf</string>
+		<string>coolvetica crammed rg.ttf</string>
+		<string>coolvetica condensed rg.ttf</string>
+		<string>coolvetica compressed rg.ttf</string>
 	</array>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
